@@ -1,2 +1,2 @@
 asset_ref,taxonomy,lon,lat,no_damage,slight,moderate,extreme,complete
-a1,"W",83.31382,29.46117,NAN,NAN,NAN,NAN,NAN
+a1,"W",83.31382,29.46117,4.61520E-13,9.75504E-09,1.93872E-04,2.69231E-02,9.72883E-01
